external-crates/move/crates/move-compiler/tests/move_check/parser/vector_literal_unclosed_args.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/parser/vector_literal_unclosed_args.move:4:17
  │  
4 │           let v = vector[
  │ ╭─────────────────^
5 │ │     }
6 │ │ }
  │ ╰─^ Could not infer this type. Try adding an annotation

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_args.move:5:5
  │
5 │     }
  │     ^ Expected a vector argument expression

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_args.move:7:1
  │
4 │         let v = vector[
  │                       - To match this '['
  ·
7 │ 
  │ ^ Expected ']'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_args.move:7:1
  │
7 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_args.move:7:1
  │
7 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

